[project]
name = "backend"
version = "0.1.0"
description = "Flask backend for dhy-n0."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.1",
    "flask>=3.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "gunicorn>=21.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
backend = "app:app"

[tool.hatch.build.targets.wheel]
include = [
    "app.py",
    "README.md"
]
